# lightbubble-player

./: .prettierignore  HOTKEYS.md  package.json  pnpm-lock.yaml  postcss.config.cjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: args.rs  av.rs  main.rs  prelude.rs
src-tauri/src/av/: codec.rs  subtitle.rs  util.rs
src/lib/: util.ts
src/lib/actions/: capture_cursor.ts
src/lib/components/: ContextMenu.svelte  Icon.svelte  SubtitleDisplay.svelte  Tooltipped.svelte
src/lib/components/buttons/: FullscreenButton.svelte  FullscreenExitButton.svelte  PauseButton.svelte  PlayButton.svelte  SettingsButton.svelte  SkipNextButton.svelte  SubtitleOffButton.svelte  SubtitleOnButton.svelte  VolumeOffButton.svelte  VolumeOnButton.svelte
src/lib/components/controls/: SettingsControl.svelte  SubtitleControl.svelte  TimeDurationDisplay.svelte  VolumeControl.svelte
src/lib/components/controls/settings/: AudioMenu.svelte  SpeedMenu.svelte  VideoMenu.svelte
src/lib/components/labels/: SubtitleLabel.svelte
src/lib/components/misc/: InvisibleScrim.svelte
src/lib/keyboard/: hotkey.ts
src/lib/player/: audio.ts  av.ts  player.ts  stream.ts  subtitle.ts
src/lib/store/: bridge.ts  player.ts  root.ts
src/routes/: +layout.svelte  +page.svelte  styles.css
